src/objects/ADvendio__ErrorLog__c.object
<CustomObject>
    <description>Holds errors</description>
    <fields>
        <fullName>ADvendio__ErrorIdentifier__c</fullName>
        <description>Typ-Line-class</description>
        <externalId>true</externalId>
        <label>Error Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__LastOccurred__c</fullName>
        <description>when did this error occurred last.</description>
        <label>Last Occurred</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__Line__c</fullName>
        <label>Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>